--- a/index.html
+++ b/index.html
@@ -13,8 +13,343 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="URL">
   <meta property="og:image" content="IMAGE URL">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/628efcf2d5.js" crossorigin="anonymous"></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Javascript -->
+  <script src="src/main.js" defer></script>
 </head>
 <body>
-  
+  <!-- Header -->
+  <header>
+    <div>
+      <img src="images/favicon.ico" alt="logo">
+      <h1><a href="#">MH Kang</a></h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#work">My work</a></li>
+        <li><a href="#testimonial">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main -->
+  <main>
+    <!-- Home -->
+    <section id="home">
+      <img src="images/profile.png" alt="MH's profile">
+      <h2>안녕하세요. 저는 풀스텍 개발자, MH입니다.</h2>
+      <p>저는 웹젠의 개발자입니다.</p>
+      <a href="#contact">Contact Me</a>
+    </section>
+
+    <!-- About -->
+    <section id="about">
+      <h2>About me</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore in, veritatis eveniet nam sapiente incidunt debitis cupiditate necessitatibus! Necessitatibus hic quia consequuntur tempore, fuga reprehenderit dolores! Animi laboriosam repellat architecto.</p>
+      <ul>
+        <li>
+          <i class="fa-brands fa-html5"></i>
+          <p>Front-end</p>
+          <p>HTML, CSS, JavaScript, React, Web APIs</p>
+        </li>
+        <li>
+          <i class="fa-solid fa-mobile"></i>
+          <p>Mobile</p>
+          <p>Android, IOS, React Native</p>
+        </li>
+        <li>
+          <i class="fa-solid fa-server"></i>
+          <p>Back-end</p>
+          <p>Python, JavaScript, Go, MySQL</p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <img src="images/jobs/webzen.png" alt="webzen logo">
+          <div>
+            <p>Webzen as Back-end Engineer</p>
+            <p>2021 Oct - Until now</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/jobs/argoon.png" alt="argoon logo">
+          <div>
+            <p>Argoon as Front-end Engineer</p>
+            <p>2020 Sept - 2021 Oct</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills">
+      <h2>My Skills</h2>
+      <p>Skills & Attributes</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt assumenda reiciendis ipsa saepe, esse, officiis maiores pariatur aspernatur fuga temporibus cumque eum voluptates velit totam recusandae illum, magni animi non?</p>
+      <div>
+        <section>
+          <h3>Coding Skills</h3>
+          <ul>
+            <li>
+              <div>
+                <span>HTML</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>HTML</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>CSS</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>JavaScript</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>Python</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>React</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>NodeJs</span>
+                <span>98%</span>
+              </div>
+              <div>
+                <div style="width:98%">
+
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div></div>
+        </section>
+        <section>
+          <h3>Tools</h3>
+          <ul>
+            <li>Visual Studio Code</li>
+            <li>IntelliJ</li>
+            <li>Android Studio Code</li>
+            <li>iOS development tools</li>
+            <li>Sketch</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Etc</h3>
+          <ul>
+            <li>Git</li>
+            <li>Scrum Master</li>
+            <li>Math</li>
+          </ul>
+        </section>
+      </div>
+    </section>
+
+    <!-- Work -->
+    <section id="work">
+      <h2>My work</h2>
+      <p>Projects</p>
+      <ul>
+        <li>
+          <button>All <span>8</span></button>
+        </li>
+        <li>
+          <button>Front-end <span>3</span></button>
+        </li>
+        <li>
+          <button>Back-end <span>3</span></button>
+        </li>
+        <li>
+          <button>Mobile-end <span>3</span></button>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project1">
+            <div>
+              <h3>Project #1</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project2">
+            <div>
+              <h3>Project #2</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project3">
+            <div>
+              <h3>Project #3</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project4">
+            <div>
+              <h3>Project #4</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project5">
+            <div>
+              <h3>Project #5</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project6">
+            <div>
+              <h3>Project #6</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project7">
+            <div>
+              <h3>Project #7</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/jobs/argoon.png" alt="project8">
+            <div>
+              <h3>Project #8</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Testimonials -->
+    <section id="testimonial">
+      <h2>Testimonial</h2>
+      <p>See what they say about me</p>
+      <ul>
+        <li>
+          <img src="images/jobs/argoon.png" alt="people1">
+          <div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, officia molestias, vero doloremque fugiat eum ad autem dolorum, veritatis rem repellendus atque provident voluptas cumque beatae dolore quaerat dolores molestiae.</p>
+            <p><a href="#">James Kim</a> /Google</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/jobs/argoon.png" alt="people2">
+          <div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, officia molestias, vero doloremque fugiat eum ad autem dolorum, veritatis rem repellendus atque provident voluptas cumque beatae dolore quaerat dolores molestiae.</p>
+            <p><a href="#">James Kim</a> /Google</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/jobs/argoon.png" alt="people3">
+          <div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, officia molestias, vero doloremque fugiat eum ad autem dolorum, veritatis rem repellendus atque provident voluptas cumque beatae dolore quaerat dolores molestiae.</p>
+            <p><a href="#">James Kim</a> /Google</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Arrow Up -->
+    <aside>
+      <a href="#home" title="back to top">
+        <i class="fa-solid fa-arrow-up"></i>
+      </a>
+    </aside>
+  </main>
+
+  <!-- Footer -->
+  <footer id="contact">
+    <h2>Let&#39;s talk</h2>
+    <p>santa4246@gmail.com</p>
+    <ul>
+      <li>
+        <a href="https://github.com/santa4246" target="_blank" title="my github link">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/mhkang" target="_blank" title="my linkedin link">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </li>
+    </ul>
+    <p>©Software Engineer MH - All rights reserved</p>
+  </footer>
 </body>
 </html>
