기본 css 디자인 작업 완료

--- a/index.html
+++ b/index.html
@@ -192,122 +192,124 @@
 
     <!-- Work -->
     <section id="work" class="section">
-      <h2 class="title">My work</h2>
-      <p class="description">Projects</p>
-      <ul>
-        <li>
-          <button>All <span>8</span></button>
-        </li>
-        <li>
-          <button>Front-end <span>3</span></button>
-        </li>
-        <li>
-          <button>Back-end <span>3</span></button>
-        </li>
-        <li>
-          <button>Mobile-end <span>3</span></button>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project1">
-            <div>
-              <h3>Project #1</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project2">
-            <div>
-              <h3>Project #2</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project3">
-            <div>
-              <h3>Project #3</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project4">
-            <div>
-              <h3>Project #4</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project5">
-            <div>
-              <h3>Project #5</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project6">
-            <div>
-              <h3>Project #6</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project7">
-            <div>
-              <h3>Project #7</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/jobs/argoon.png" alt="project8">
-            <div>
-              <h3>Project #8</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-      </ul>
+      <div class="max-container">
+        <h2 class="title">My work</h2>
+        <p class="description">Projects</p>
+        <ul class="categories">
+          <li>
+            <button class="category category--selected">All <span class="category__count">8</span></button>
+          </li>
+          <li>
+            <button class="category">Front-end <span class="category__count">3</span></button>
+          </li>
+          <li>
+            <button class="category">Back-end <span class="category__count">3</span></button>
+          </li>
+          <li>
+            <button class="category">Mobile-end <span class="category__count">3</span></button>
+          </li>
+        </ul>
+        <ul class="projects">
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project1" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #1</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project2" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #2</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project3" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #3</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project4" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #4</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project5" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #5</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project6" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #6</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project7" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #7</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li class="project">
+            <a href="#" target="_blank">
+              <img src="images/jobs/argoon.png" alt="project8" class="project__img">
+              <div class="project__metadata">
+                <h3 class="project__title">Project #8</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- Testimonials -->
-    <section id="testimonial" class="section">
+    <section id="testimonial" class="section max-container">
       <h2 class="title">Testimonial</h2>
       <p class="description">See what they say about me</p>
-      <ul>
-        <li>
-          <img src="images/jobs/argoon.png" alt="people1">
-          <div>
+      <ul class="testimonials">
+        <li class="testimonial">
+          <img src="images/jobs/argoon.png" alt="people1" class="testimonial__img">
+          <div class="testimonial__bubble">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, officia molestias, vero doloremque fugiat eum ad autem dolorum, veritatis rem repellendus atque provident voluptas cumque beatae dolore quaerat dolores molestiae.</p>
-            <p><a href="#">James Kim</a> /Google</p>
+            <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Google</p>
           </div>
         </li>
-        <li>
-          <img src="images/jobs/argoon.png" alt="people2">
-          <div>
+        <li class="testimonial">
+          <img src="images/jobs/argoon.png" alt="people2" class="testimonial__img">
+          <div class="testimonial__bubble">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, officia molestias, vero doloremque fugiat eum ad autem dolorum, veritatis rem repellendus atque provident voluptas cumque beatae dolore quaerat dolores molestiae.</p>
-            <p><a href="#">James Kim</a> /Google</p>
+            <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Google</p>
           </div>
         </li>
-        <li>
-          <img src="images/jobs/argoon.png" alt="people3">
-          <div>
+        <li class="testimonial">
+          <img src="images/jobs/argoon.png" alt="people3" class="testimonial__img">
+          <div class="testimonial__bubble">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, officia molestias, vero doloremque fugiat eum ad autem dolorum, veritatis rem repellendus atque provident voluptas cumque beatae dolore quaerat dolores molestiae.</p>
-            <p><a href="#">James Kim</a> /Google</p>
+            <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Google</p>
           </div>
         </li>
       </ul>
@@ -315,7 +317,7 @@
 
     <!-- Arrow Up -->
     <aside>
-      <a href="#home" title="back to top">
+      <a class="arrow-up" href="#home" title="back to top">
         <i class="fa-solid fa-arrow-up"></i>
       </a>
     </aside>
@@ -323,21 +325,23 @@
 
   <!-- Footer -->
   <footer id="contact" class="section">
-    <h2 class="title">Let&#39;s talk</h2>
-    <p class="description">santa4246@gmail.com</p>
-    <ul>
-      <li>
-        <a href="https://github.com/santa4246" target="_blank" title="my github link">
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/mhkang" target="_blank" title="my linkedin link">
-          <i class="fa-brands fa-linkedin"></i>
-        </a>
-      </li>
-    </ul>
-    <p>©Software Engineer MH - All rights reserved</p>
+    <div class="max-container">
+      <h2 class="title">Let&#39;s talk</h2>
+      <p class="description">santa4246@gmail.com</p>
+      <ul class="contact__links">
+        <li>
+          <a class="contact__link" href="https://github.com/santa4246" target="_blank" title="my github link">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a class="contact__link" href="https://www.linkedin.com/in/mhkang" target="_blank" title="my linkedin link">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+      <p>©Software Engineer MH - All rights reserved</p>
+    </div>
   </footer>
 </body>
 </html>
