css media-query 추가

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img class="header__logo__img" src="images/favicon.ico" alt="logo">
       <h1 class="header__logo__title"><a href="#">MinHyeok</a></h1>
     </div>
-    <nav>
+    <nav class="header__nav">
       <ul class="header__menu">
         <li><a class="header__menu__item active" href="#home">Home</a></li>
         <li><a class="header__menu__item" href="#about">About</a></li>
@@ -66,7 +66,7 @@
         <li class="major">
           <i class="fa-solid fa-mobile major__icon"></i>
           <p class="major__title">Mobile</p>
-          <p>Android, IOS, React Native</p>
+          <p>Android, IOS, React Native, React Native, React Native</p>
         </li>
         <li class="major">
           <i class="fa-solid fa-server major__icon"></i>
