--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
       </ul>
       <ul class="jobs">
         <li class="job">
-          <img src="images/jobs/webzen.png" alt="webzen logo">
+          <img src="images/jobs/webzen.png" alt="webzen logo" width="100px">
           <div>
             <p class="job__name">Webzen as Back-end Engineer</p>
             <p class="job__period">2021 Oct - Until now</p>
           </div>
         </li>
         <li class="job">
-          <img src="images/jobs/argoon.png" alt="argoon logo">
+          <img src="images/jobs/argoon.png" alt="argoon logo" width="100px">
           <div>
             <p class="job__name">Argoon as Front-end Engineer</p>
             <p class="job__period">2020 Sept - 2021 Oct</p>
