--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- About -->
     <section id="about" class="section max-container">
       <h2 class="title">About me</h2>
-      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore in, veritatis eveniet nam sapiente incidunt debitis cupiditate necessitatibus! Necessitatibus hic quia consequuntur tempore, fuga reprehenderit dolores! Animi laboriosam repellat architecto.</p>
+      <p class="description">풀스텍 개발자를 꿈꾸고 있습니다. 현재 가장 많이 사용하는 언어는 Go 이며 웹젠에서 백엔드 개발자로 근무중입니다.</p>
       <ul class="majors">
         <li class="major">
           <i class="fa-brands fa-html5 major__icon"></i>
@@ -78,7 +78,7 @@
         <li class="major">
           <i class="fa-solid fa-server major__icon"></i>
           <p class="major__title">Back-end</p>
-          <p>Python, JavaScript, Go, MySQL</p>
+          <p>Go, C#, Python, NodeJS, MySQL</p>
         </li>
       </ul>
       <ul class="jobs">
@@ -104,7 +104,7 @@
       <div class="max-container">
         <h2 class="title">My Skills</h2>
         <p class="description">Skills & Attributes</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt assumenda reiciendis ipsa saepe, esse, officiis maiores pariatur aspernatur fuga temporibus cumque eum voluptates velit totam recusandae illum, magni animi non?</p>
+        <p>사용 가능한 개발언어 입니다.</p>
         <div class="skills">
           <section class="skills__coding">
             <h3 class="skills__title">Coding Skills</h3>
@@ -112,64 +112,64 @@
               <li class="bar">
                 <div class="bar__metadata">
                   <span>HTML</span>
-                  <span>98%</span>
+                  <span>80%</span>
                 </div>
                 <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
-                </div>
-              </li>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>HTML</span>
-                  <span>98%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
+                  <div class="bar__value" style="width:80%"></div>
                 </div>
               </li>
               <li class="bar">
                 <div class="bar__metadata">
                   <span>CSS</span>
-                  <span>98%</span>
+                  <span>70%</span>
                 </div>
                 <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
+                  <div class="bar__value" style="width:70%"></div>
                 </div>
               </li>
               <li class="bar">
                 <div class="bar__metadata">
                   <span>JavaScript</span>
-                  <span>98%</span>
+                  <span>70%</span>
                 </div>
                 <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
+                  <div class="bar__value" style="width:70%"></div>
+                </div>
+              </li>
+              <li class="bar">
+                <div class="bar__metadata">
+                  <span>Go</span>
+                  <span>80%</span>
+                </div>
+                <div class="bar__bg">
+                  <div class="bar__value" style="width:80%"></div>
                 </div>
               </li>
               <li class="bar">
                 <div class="bar__metadata">
                   <span>Python</span>
-                  <span>98%</span>
+                  <span>80%</span>
                 </div>
                 <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
+                  <div class="bar__value" style="width:80%"></div>
                 </div>
               </li>
               <li class="bar">
                 <div class="bar__metadata">
-                  <span>React</span>
-                  <span>98%</span>
+                  <span>NodeJS</span>
+                  <span>70%</span>
                 </div>
                 <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
+                  <div class="bar__value" style="width:70%"></div>
                 </div>
               </li>
               <li class="bar">
                 <div class="bar__metadata">
-                  <span>NodeJs</span>
-                  <span>98%</span>
+                  <span>C#</span>
+                  <span>70%</span>
                 </div>
                 <div class="bar__bg">
-                  <div class="bar__value" style="width:98%"></div>
+                  <div class="bar__value" style="width:70%"></div>
                 </div>
               </li>
             </ul>
@@ -179,18 +179,20 @@
             <h3 class="skills__title">Tools</h3>
             <ul>
               <li>Visual Studio Code</li>
-              <li>IntelliJ</li>
-              <li>Android Studio Code</li>
-              <li>iOS development tools</li>
-              <li>Sketch</li>
+              <li>Visual Studio</li>
+              <li>SQL Server</li>
+              <li>SQLYog</li>
+              <li>Git</li>
+              <li>SVN</li>
+              <li>Redmine</li>
             </ul>
           </section>
           <section class="skills__etc">
             <h3 class="skills__title">Etc</h3>
             <ul>
-              <li>Git</li>
-              <li>Scrum Master</li>
-              <li>Math</li>
+              <li>Microsoft Office</li>
+              <li>Notion</li>
+              <li>Slack</li>
             </ul>
           </section>
         </div>
@@ -218,8 +220,8 @@
         </ul>
         <ul class="projects">
           <li class="project" data-type="front-end">
-            <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project1" class="project__img">
+            <a href="https://github.com/santa4246/SeongNam-AI-Preinternship-Team-C" target="_blank">
+              <img src="images/projects/teesis.jpg" alt="project1" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #1</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -227,8 +229,8 @@
             </a>
           </li>
           <li class="project" data-type="front-end">
-            <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project2" class="project__img">
+            <a href="https://santa4246.github.io/JS-Study/1.number-baseball/number_baseball.html" target="_blank">
+              <img src="images/projects/baseball.jpg" alt="project2" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #2</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -236,8 +238,8 @@
             </a>
           </li>
           <li class="project" data-type="front-end">
-            <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project3" class="project__img">
+            <a href="https://github.com/santa4246/renewal-SeoulSky" target="_blank">
+              <img src="images/projects/seoulsky.jpg" alt="project3" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #3</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -245,8 +247,8 @@
             </a>
           </li>
           <li class="project" data-type="front-end">
-            <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project4" class="project__img">
+            <a href="https://github.com/santa4246/Chatting" target="_blank">
+              <img src="images/projects/chat.jpg" alt="project4" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #4</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -254,8 +256,8 @@
             </a>
           </li>
           <li class="project" data-type="back-end">
-            <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project5" class="project__img">
+            <a href="https://github.com/santa4246/to-do-app-node.js" target="_blank">
+              <img src="images/projects/todolist.jpg" alt="project5" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #5</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -264,7 +266,7 @@
           </li>
           <li class="project" data-type="back-end">
             <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project6" class="project__img">
+              <img src="images/projects/seoulsky.jpg" alt="project6" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #6</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -273,7 +275,7 @@
           </li>
           <li class="project" data-type="back-end">
             <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project7" class="project__img">
+              <img src="images/projects/seoulsky.jpg" alt="project7" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #7</h3>
                 <p>Clone Coding with HTML, CSS</p>
@@ -282,7 +284,7 @@
           </li>
           <li class="project" data-type="mobile-end">
             <a href="#" target="_blank">
-              <img src="images/jobs/argoon.png" alt="project8" class="project__img">
+              <img src="images/projects/seoulsky.jpg" alt="project8" class="project__img">
               <div class="project__metadata">
                 <h3 class="project__title">Project #8</h3>
                 <p>Clone Coding with HTML, CSS</p>
