--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/628efcf2d5.js" crossorigin="anonymous"></script>
+  <!-- Typeit -->
+  <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Javascript -->
   <script type="module" src="src/main.js" defer></script>
   <script type="module" src="src/projects.js" defer></script>
   <script type="module" src="src/active_menu.js" defer></script>
+  <script type="module" src="src/type.js" defer></script>
 </head>
 <body>
   <!-- Header -->
@@ -54,7 +57,7 @@
     <section id="home">
       <div class="home__container">
         <img class="home__avatar" src="images/profile.png" alt="MH's profile">
-        <h2 class="home__title">Hello<br />I&#39;m <strong class="home__title--strong">Backend Engineer, </strong>MinHyeok</h2>
+        <h2 class="home__title" aria-label="Hello, I'am fullstack engineer MinHyeok">Hello<br />I&#39;m <strong class="home__title--strong">Backend Engineer</strong> , MinHyeok</h2>
         <p class="home__description">Street Coder, Backend, DevOps Engineer</p>
         <a class="home__contact" href="#contact">Contact Me</a>
       </div>
